kubernetes/api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: springboot-api
  ports:
    - port: 8080
  type: NodePort
