kubernetes/mysql-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: mysql
  name: mysql
spec:
  clusterIP: None
  ports:
    - port: 3306
  selector:
    name: mysql
